add method GET  api/posts/{post}
